test: fix spf4j failures in tests under java 17