@@ -127,7 +127,7 @@ dependencies {
     }
     testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
 
-    testImplementation('org.spf4j:spf4j-slf4j-test:8.9.8') {
+    testImplementation('org.spf4j:spf4j-slf4j-test:8.10.0') {
         because "testable logging"
     }
     testImplementation('org.slf4j:slf4j-api:2.0.13')
@@ -160,6 +160,8 @@ configurations.matching({ it =~ ~/test(Runtime|Compile|Implementation|PmdAux)Cla
     resolutionStrategy(gradlegoo.prefers("logging", "slf4j-impl-capability",
             "spf4j-slf4j-test", "tests use slf4j-test"))
 
+    // SPF4J has a dependency on "avro-logical-types-gen:1.3", which does not exist. However, version "1.3p" does.
+    resolutionStrategy.force('org.spf4j:avro-logical-types-gen:1.3p')
     // old hamcrest versions exist only to spite us
     // http://hamcrest.org/JavaHamcrest/distributables#upgrading-from-hamcrest-1x
     exclude group: "org.hamcrest", module: "hamcrest-core"
@@ -184,6 +186,10 @@ javafx {
 
 test {
     useJUnitPlatform()
+
+    // The SPF4J test dependency relies on some forbidden reflection to improve logging performance.
+    // Java 17 will not tolerate this without a bit of encouragement.
+    jvmArgs("--add-opens=java.logging/java.util.logging=ALL-UNNAMED")
 }
 
 checkstyle {
